--- a/chap6-valor_analysis.tex
+++ b/chap6-valor_analysis.tex
@@ -582,7 +582,7 @@ Unless otherwise stated, the uncertainties from efficiency covariance matrices a
 
 The study of the impact of different efficiency uncertainties was first done for the \numu channel because it was expected that there would be a greater impact than for either of the \nue channels. This is because the typical event rate for the \numu channel is several order of magnitude greater than that of \nue meaning that the \numu channel is systematics limited whereas the \nue channels may tend towards being statistics limited. Once a contour becomes statistics limited, continuing to apply additional systematic uncertainties will begin to have diminishing impacts. 
 
-\subsection{\texorpdfstring{Impact of efficiency systematics on \numu disappearance sensitivities}{Impact of efficiency systematics on numu disappearance sensitivities}}
+\subsection{\texorpdfstring{Impact of Efficiency Systematics on \numu Disappearance Sensitivities}{Impact of Efficiency Systematics on numu Disappearance Sensitivities}}
 
 
 The impact of fully correlated uncertainties up to 10\% are shown on the left of \FigureRef{fig:numu_corr_uncorr_error} whilst keeping the uncorrelated uncertainty at 0\%. The right plot shows the impact of increasing the uncorrelated uncertainties uniformly across all bins with a fixed correlated uncertainty of 2\%. It follows that for even relatively large correlated uncertainties the impact on the sensitivity is minor and that any reduction in sensitivities will be largely dominated by the uncorrelated uncertainty. 
@@ -631,7 +631,7 @@ In each case, the uncorrelated uncertainty for the bins of interest are set to 2
 
 
 \clearpage
-\subsection{\texorpdfstring{Impact of efficiency systematics on \nue appearance sensitivities}{Impact of efficiency systematics on nue appearance sensitivities}}
+\subsection{\texorpdfstring{Impact of Efficiency Systematics on \nue Appearance Sensitivities}{Impact of Efficiency Systematics on nue Appearance Sensitivities}}
 
 In order to gauge the contribution of some typical efficiency uncertainty, \FigureRef{fig:nue_app_syst_groups+efficiency} shows the impact on the \nue appearance sensitivity from individual sets of systematic parameters as in \FigureRef{fig:nue_app_syst_group_sensitivities} but with the addition of a 2\% correlated + 2\% uncorrelated efficiency uncertainty. The impact of the efficiency uncertainty is comparable to the proposal interaction systematics having the smallest contribution to the sensitivity. 
 
@@ -673,7 +673,7 @@ The impact of having a set of bins with a poorly constrained uncertainty was als
 
 \clearpage
 
-\subsection{\texorpdfstring{Impact of efficiency systematics on \nue disappearance sensitivities}{Impact of efficiency systematics on nue disappearance sensitivities}}
+\subsection{\texorpdfstring{Impact of Efficiency Systematics on \nue Disappearance Sensitivities}{Impact of Efficiency Systematics on nue Disappearance Sensitivities}}
 
 As was done for \nue appearance, \FigureRef{fig:nue_disapp_syst_groups_detector} shows the impact from \nue disappearance sensitivity from individual sets of systematic parameters as in \FigureRef{fig:nue_disapp_syst_groups} but with the addition of a 2\% correlated + 2\% uncorrelated efficiency uncertainty. The efficiency uncertainty shows the smallest reduction in sensitivity across all ranges of $\Delta m_{41}^2 \gtrsim 3$ and is comparable to the other systematic sets at $\Delta m_{41}^2$ values below $\sim 3$.
 
