--- a/main.tex
+++ b/main.tex
@@ -49,7 +49,7 @@
 
 %% Define the un-numbered front matter (cover pages, rubrik and table of contents)
 \begin{frontmatter}
-  %\input{frontmatter}
+  \input{frontmatter}
 \end{frontmatter}
 
 %% Start the content body of the thesis
@@ -68,7 +68,7 @@
 
 %% Produce the appendices
 \begin{appendices}
-  %\input{appendices}
+  \input{appendices}
 \end{appendices}
 
 %% Produce the un-numbered back matter (e.g. colophon,
