--- a/preamble.tex
+++ b/preamble.tex
@@ -17,6 +17,7 @@
 \usepackage{amssymb}
 \usepackage{fullpage}
 \usepackage{lscape}
+\usetikzlibrary{angles, quotes}
 
 \usepackage[a4paper,
             left=30mm,
